manifests/ray-serve-llama/model_deployment/base/dashboard_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
  name: ray-dashboard-llama2service
  namespace: opendatahub
spec:
  port:
    targetPort: dashboard
  to:
    kind: Service
    name: llama2service-head-svc
