manifests/ray-serve-llama/model_deployment/base/service_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
  name: llama2service
  namespace: opendatahub
spec:
  port:
    targetPort: serve
  to:
    kind: Service
    name: llama2service-head-svc
